--- a/emergency-assistant-react/.gitignore
+++ b/emergency-assistant-react/.gitignore
@@ -21,3 +21,43 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDE and editor files
+/.idea
+/.vscode
+/.vs
+*.sublime-project
+*.sublime-workspace
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.swp
+*.lock
+*~
+*.log
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Miscellaneous
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+This .gitignore configuration covers the most common files and directories that are usually excluded from version control in a React TypeScript project. However, keep in mind that your specific project setup or additional dependencies may require additional exclusions.
+
+Feel free to customize the .gitignore file to meet your specific project needs.
+
+
+
+
+
+
